# polarix_arm

./: README.md
leg_assembly/: CMakeLists.txt  arm_hardware_interface.xml  package.xml
leg_assembly/config/: joint_names_leg_assembly.yaml
leg_assembly/launch/: display.launch.py  gazebo.launch  gazebo.launch.py  hardware.launch.py
leg_assembly/meshes/: base_link.STL  end_effector.STL  finger_link_left.STL  finger_link_right.STL  finger_tip_left.STL  finger_tip_right.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
leg_assembly/src/: arm_hardware_interface.cpp
leg_assembly/urdf/: leg_assembly.csv  leg_assembly.urdf  leg_assembly_gpt.urdf
leg_assembly/worlds/: empty.world
leg_assembly_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
leg_assembly_moveit_config/config/: arm_hardware_ros2_control.xacro  config_used.rviz  gazebo.xacro  gazebo_ros2_control.xacro  gz_ros2_controllers.yaml  initial_positions.yaml  joint_limits.yaml  leg_assembly.ros2_control.xacro  leg_assembly.srdf  leg_assembly.urdf.xacro  leg_assembly_gazebo.urdf.xacro  leg_assembly_hardware.urdf.xacro  moveit_controllers.yaml  robot_gazebo.xacro  ros2_controllers.yaml
leg_assembly_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
teleop_collision/: CMakeLists.txt  package.xml
teleop_collision/src/: teleop_collision.cpp
